--- a/portfolio.html
+++ b/portfolio.html
@@ -28,26 +28,38 @@
         </nav>    
         </header>
 
-        <div class="container-portfolio">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div>
-                        <img src="assets/mad-barbers.jpg" alt="logo of barber shop">
-                    </div>
-                </div>
+
+    <div class="container-form-portfolio">
+        <h2 class="h2-portfolio">Portfolio</h2>
+        <div class="row">
+            <div class="col-md-3">
+                <img class="portfolio-img" src="assets/mad-barbers.jpg" alt="logo of barber shop"width="200px" height="200px">
+                <div class="text">Mad Barbers</div>
             </div>
-                 <div class="col-sm-6">
-                    <div>
-                        <img src="assets/UCL 2019.jpg" alt="logo" width="200px" height="200px">
-                    </div>
-                </div>
-             
-
-
-
-
-
+            <div class="col-md-3">
+                <img  class="portfolio-img" src="assets/UCL 2019.jpg" alt="logo" width="200px" height="200px">
+                <div class="text">soccer</div>
+            </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-3">
+                <img  class="portfolio-img" src="assets/music.jpg" alt="img thumbnail" width="200px" height="200px" >
+                <div class="text">Music</div>
+            </div>
+            <div class="col-md-3">
+                <img  class="portfolio-img" src="assets/pic3.jpg" alt="img thumbnail" width="200px" height="200px">
+                <div class="text">Construction</div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-5">
+                <img class="portfolio-img" src="assets/video games.jpg" alt="video game thumbnail" width="200px" height="200px">
+                <div class="text">Video Games</div>
+            </div>
+        </div>
+    </div>
 
 
         <footer>copyright ©</footer> 
