updated my header and added some changes to the container

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-        <h1 id="myname">Anthony Guerrero</h1>
         <nav>
-            <div class="container">
-                    <ul class="nav justify-content-end mynav">
+            <div class="container" style="overflow: auto; clear: both;">
+                <h1 id="myname" class="float-left">Anthony Guerrero</h1>
+                    <ul class="nav float-right mynav">
                         <li class="nav-item">
                         <a class="nav-link active" href="#">About</a>
                         </li>
@@ -22,7 +22,7 @@
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
-                        </li>
+                        </li>   
                     </ul>
             </div>        
         </nav>    
