--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <nav>
-            <div class="container">
-                <h1 id="myname">Anthony Guerrero</h1>
-                    <ul class="nav justify-content-end mynav">
+            <div class="container" style="overflow: auto; clear: both;">
+                <h1 id="myname" class="float-left">Anthony Guerrero</h1>
+                    <ul class="nav float-right mynav">
                         <li class="nav-item">
                         <a class="nav-link active" href="#">About</a>
                         </li>
@@ -26,7 +26,7 @@
                     </ul>
             </div>        
         </nav>    
-        </header>
+    </header>
 
 
     <div class="container-form-portfolio">
