--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,13 @@
                 <h1 id="myname" class="float-left">Anthony Guerrero</h1>
                     <ul class="nav float-right mynav">
                         <li class="nav-item">
-                        <a class="nav-link active" href="#">About</a>
+                        <a class="nav-link active" href="index.html">About</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                         </li>   
                     </ul>
             </div>        
