--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="assets/phone_icon.webp" type="image/gif" sizes="16x16">
     <title>Contact</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -15,10 +16,10 @@
                 <h1 id="myname" class="float-left">Anthony Guerrero</h1>
                     <ul class="nav float-right mynav">
                         <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About</a>
+                        <a class="nav-link active" href="index.html">About Me |</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio |</a>
                         </li>
                         <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
