--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About</title>
+        <link rel="icon" href="assets/about_me.png" type="image/gif" sizes="16x16">
+    <title>About Me</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">    
 </head>
@@ -14,16 +15,16 @@
             <div class="container" style="overflow: auto; clear: both;">
                 <h1 id="myname" class="float-left">Anthony Guerrero</h1>
                     <ul class="nav float-right mynav">
-                        <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">About Me |</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio |</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
-                        </li>   
-                    </ul>
+                    </li>   
+                 </ul>
             </div>        
         </nav>    
     </header>
@@ -50,7 +51,6 @@
                     watching videos of people coding I fell in love and finally knew what I wanted to do with my life. It only
                     took 28 years of my life but I'm glad that I didn't rush into my major and spent thousands of dollars for a
                     career that I wasn't going to be happy with.</p>
-                    
                     </div>
                     
             </div>
