--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="assets/portfolio-image-1.png" type="image/gif" sizes="16x16">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -14,16 +15,16 @@
             <div class="container" style="overflow: auto; clear: both;">
                 <h1 id="myname" class="float-left">Anthony Guerrero</h1>
                     <ul class="nav float-right mynav">
-                        <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">About Me |</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio |</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
-                        </li>   
-                    </ul>
+                    </li>   
+                </ul>
             </div>        
         </nav>    
     </header>
