Added more style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2 class="about-me">About me</h2>
             </div>
             <div class="col-sm-3">
-                <img class="me" src="assets/Me (1).jpg" width="250px" height="350px" alt="img of me">
+                <img class="me" class="img-thumbnail" class="img-responsive" src="assets/Me (1).jpg" width="250px" height="350px" alt="img of me">
             </div>
             <div class="col-sm-6">
                 <p class="info">My name is Anthony Guerrero, I was born in <strong>Queens, NY</strong> and when I was 12 years old I moved to
