updating weather hw to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,11 +55,17 @@
         </div>
 
         <div class="row">
-            <div class="col-md-5">
+            <div class="col-md-3">
                 <img class="portfolio-img" src="assets/video games.jpg" alt="video game thumbnail" width="200px" height="200px">
                 <div class="text">Video Games</div>
             </div>
+            <div class="col-md-3">
+                <img id="weatherDashboard" src="assets/HomePage.png" alt="" width="200px" height="200px">
+                <a href="https://github.com/knuckleh3ad89/weather-dashboard"></a>
+                <div class="weatherText">Weather Dashboard</div>
+            </div>
         </div>
+
     </div>
 
 
