added weather Dashboard to my portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="assets/portfolio-image-1.png" type="image/gif" sizes="16x16">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav>
             <div class="container" style="overflow: auto; clear: both;">
                 <h1 id="myname" class="float-left">Anthony Guerrero</h1>
-                    <ul class="nav float-right mynav">
+                <ul class="nav float-right mynav">
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">About Me |</a>
                     </li>
@@ -23,52 +26,30 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Me</a>
-                    </li>   
+                    </li>
                 </ul>
-            </div>        
-        </nav>    
+            </div>
+        </nav>
     </header>
 
 
     <div class="container-form-portfolio">
         <h2 class="h2-portfolio">Portfolio</h2>
-        <div class="row">
-            <div class="col-md-3">
-                <img class="portfolio-img" src="assets/mad-barbers.jpg" alt="logo of barber shop"width="200px" height="200px">
-                <div class="text">Mad Barbers</div>
-            </div>
-            <div class="col-md-3">
-                <img  class="portfolio-img" src="assets/UCL 2019.jpg" alt="logo" width="200px" height="200px">
-                <div class="text">soccer</div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-3">
-                <img  class="portfolio-img" src="assets/music.jpg" alt="img thumbnail" width="200px" height="200px" >
-                <div class="text">Music</div>
-            </div>
-            <div class="col-md-3">
-                <img  class="portfolio-img" src="assets/pic3.jpg" alt="img thumbnail" width="200px" height="200px">
-                <div class="text">Construction</div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-3">
-                <img class="portfolio-img" src="assets/video games.jpg" alt="video game thumbnail" width="200px" height="200px">
-                <div class="text">Video Games</div>
-            </div>
+       
             <div class="col-md-3">
                 <img id="weatherDashboard" src="assets/HomePage.png" alt="" width="200px" height="200px">
-                <a href="https://github.com/knuckleh3ad89/weather-dashboard"></a>
                 <div class="weatherText">Weather Dashboard</div>
             </div>
         </div>
 
-    </div>
+    
 
 
-        <footer>copyright ©</footer> 
+    <footer>copyright ©</footer>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
 </body>
+
 </html>
