Added some of my HW to my portfolio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container" style="overflow: auto; clear: both;">
                 <h1 id="myname" class="float-left">Anthony Guerrero</h1>
                     <ul class="nav float-right mynav">
-                        <i id="toggle" class="fas fa-toggle-on"></i>  
+                        <!-- <i id="toggle" class="fas fa-toggle-on"></i>   -->
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">About Me |</a>
                     </li>
