--- a/portfolio.html
+++ b/portfolio.html
@@ -35,20 +35,29 @@
 
     <div class="container-form-portfolio">
         <h2 class="h2-portfolio">Portfolio</h2>
-       
+        <div class="row">
             <div class="col-md-3">
                 <img id="weatherDashboard" src="assets/HomePage.png" alt="" width="200px" height="200px">
                 <div class="weatherText">Weather Dashboard</div>
             </div>
+            <div class="col-md-3 codeQ">
+                <img src="./assets/Code Quiz.png" alt="" width="200px" height="200px">
+                <div class="codeQuizText">Code Quiz</div>
+            </div>
+            <div class="col-md-3 codeQ">
+                <img src="./assets/Local Wire.png" alt="" width="200px" height="200px">
+                <div class="LocalWireText">Local Wire</div>
+            </div>
         </div>
+    </div>
 
-    
+
 
 
     <footer>copyright ©</footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"
-    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
 
