--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="assets/portfolio-image-1.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="./assets/portfolio-image-1.png" type="image/gif" sizes="16x16">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -19,13 +19,13 @@
                 <h1 id="myname" class="float-left">Anthony Guerrero</h1>
                 <ul class="nav float-right mynav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About Me |</a>
+                        <a class="nav-link active" href="./index.html">About Me |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio |</a>
+                        <a class="nav-link" href="./portfolio.html">Portfolio |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Me</a>
+                        <a class="nav-link" href="./contact.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -36,18 +36,23 @@
     <div class="container-form-portfolio">
         <h2 class="h2-portfolio">Portfolio</h2>
         <div class="row">
-            <div class="col-md-4">
-                <img id="weatherDashboard" src="assets/HomePage.png" alt="" width="200px" height="200px">
+            <div class="col-sm-3">
+                <img id="weatherDashboard" src="./assets/HomePage.png" alt="" width="200px" height="200px">
                 <div class="weatherText">Weather Dashboard</div>
             </div>
-            <div class="col-md-4 codeQ">
+            <div class="col-sm-3 codeQ">
                 <img src="./assets/Code Quiz.png" alt="" width="200px" height="200px">
                 <div class="codeQuizText">Code Quiz</div>
             </div>
-            <div class="col-md-4 codeQ">
+            <div class="col-sm-3 codeQ">
                 <img src="./assets/Local Wire.png" alt="" width="200px" height="200px">
                 <div class="LocalWireText">Local Wire</div>
             </div>
+            <div class="col-sm-3">
+                <img src="./assets/good_readme.png" alt="" width="200px" height="200px">
+                <div class="readMeText">README.md</div>
+            </div>
+
         </div>
     </div>
 
@@ -58,7 +63,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
