fixing up my css and portfolio link

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -35,22 +35,24 @@
 
     <div class="container-form-portfolio">
         <h2 class="h2-portfolio">Portfolio</h2>
+        <h3>Front End Work</h3>
+        <hr>
         <div class="row">
             <div class="col-sm-3">
-                <img id="weatherDashboard" src="./assets/HomePage.png" alt="" width="200px" height="200px">
-                <div class="weatherText">Weather Dashboard</div>
+                <img id="weatherDashboard" class="clickLinks" src="./assets/HomePage.png" alt="" width="200px" height="200px">
+                <div class="Text">Weather Dashboard</div>
             </div>
             <div class="col-sm-3 codeQ">
-                <img src="./assets/Code Quiz.png" alt="" width="200px" height="200px">
-                <div class="codeQuizText">Code Quiz</div>
+                <img id="codeQuiz" class="clickLinks" src="./assets/Code Quiz.png" alt="" width="200px" height="200px">
+                <div class="Text">Code Quiz</div>
             </div>
             <div class="col-sm-3 codeQ">
-                <img src="./assets/Local Wire.png" alt="" width="200px" height="200px">
-                <div class="LocalWireText">Local Wire</div>
+                <img id="LocalWire" class="clickLinks" src="./assets/Local Wire.png" alt="" width="200px" height="200px">
+                <div class="Text">Local Wire</div>
             </div>
             <div class="col-sm-3">
-                <img src="./assets/good_readme.png" alt="" width="200px" height="200px">
-                <div class="readMeText">README.md</div>
+                <img id="readMe" class="clickLinks" src="./assets/good_readme.png" alt="" width="200px" height="200px">
+                <div class="Text">README.md</div>
             </div>
 
         </div>
