added password HW

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -35,26 +35,34 @@
 
     <div class="container-form-portfolio">
         <h2 class="h2-portfolio">Portfolio</h2>
-        <h3>Front End Work</h3>
+        <h3 class="frontEndHeader" >Front End Work</h3>
         <hr>
-        <div class="row">
-            <div class="col-sm-3">
-                <img id="weatherDashboard" class="clickLinks" src="./assets/HomePage.png" alt="" width="200px" height="200px">
+        <div class="clearFix row">
+            <div class="col-md-3">
+                <img id="weatherDashboard" class="clickLinks" src="./assets/HomePage.png" alt="" width="200px"
+                    height="200px">
                 <div class="Text">Weather Dashboard</div>
             </div>
-            <div class="col-sm-3 codeQ">
+            <div class="col-md-3 codeQ">
                 <img id="codeQuiz" class="clickLinks" src="./assets/Code Quiz.png" alt="" width="200px" height="200px">
                 <div class="Text">Code Quiz</div>
             </div>
-            <div class="col-sm-3 codeQ">
-                <img id="LocalWire" class="clickLinks" src="./assets/Local Wire.png" alt="" width="200px" height="200px">
+            <div class="col-md-3 codeQ">
+                <img id="LocalWire" class="clickLinks" src="./assets/Local Wire.png" alt="" width="200px"
+                    height="200px">
                 <div class="Text">Local Wire</div>
             </div>
-            <div class="col-sm-3">
+            <div class="col-md-3">
                 <img id="readMe" class="clickLinks" src="./assets/good_readme.png" alt="" width="200px" height="200px">
                 <div class="Text">README.md</div>
             </div>
 
+        </div>
+        <div  class="row mt-4">
+            <div class="col-md-3">
+                <img id="passwordGenerator" class="clickLinks" src="./assets/password_generator.png" alt="" width="200px" height="200px">
+                <div class="Text">Password Genertor</div>
+            </div>
         </div>
     </div>
 
