moved html out of public folder

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 
     <div class="container-form-portfolio">
         <h2 class="h2-portfolio">Portfolio</h2>
-        <h3 class="frontEndHeader" >Front End Work</h3>
+        <h3 class="frontEndHeader">Front End Work</h3>
         <hr>
         <div class="clearFix row">
             <div class="col-md-3">
@@ -47,21 +47,52 @@
                 <img id="codeQuiz" class="clickLinks" src="./assets/Code Quiz.png" alt="" width="200px" height="200px">
                 <div class="Text">Code Quiz</div>
             </div>
-            <div class="col-md-3 codeQ">
-                <img id="LocalWire" class="clickLinks" src="./assets/Local Wire.png" alt="" width="200px"
-                    height="200px">
-                <div class="Text">Local Wire</div>
+            <div class="col-md-3 ">
+                <img id="passwordGenerator" class="clickLinks" src="./assets/password_generator.png" alt=""
+                    width="200px" height="200px">
+                <div class="Text">Password Genertor</div>
+
             </div>
             <div class="col-md-3">
                 <img id="readMe" class="clickLinks" src="./assets/good_readme.png" alt="" width="200px" height="200px">
                 <div class="Text">README.md</div>
             </div>
+            <div class="col-md-3">
+                <img id="workDay" class="clickLinks" src="./assets/work_day-Scheduler.png" alt="" width="200px" height="200px">
+                <div class="Text">Work Day Scheduler</div>
+            </div>
+            <div class="col-md-3">
+                <img id="teamTemplate" class="clickLinks" src="./assets/team_template_final.png" alt="" width="200px" height="200px">
+                <div class="Text">Team Template</div>
+            </div>
 
         </div>
-        <div  class="row mt-4">
+        <hr>
+        <h3 id="projects">Projects</h3>
+        <div class="row mt-4">
             <div class="col-md-3">
-                <img id="passwordGenerator" class="clickLinks" src="./assets/password_generator.png" alt="" width="200px" height="200px">
-                <div class="Text">Password Genertor</div>
+                <img id="LocalWire" class="clickLinks" src="./assets/Local Wire.png" alt="" width="200px"
+                    height="200px">
+                <div class="Text">Local Wire</div>
+            </div>
+            <div class="col-md-3">
+                <img id="stackChat" src="./assets/STACK_CHAT.png" class="clickLinks" alt="img of homepage of stack chat" width="200px" height="200px">
+                <div class="Text">STACK CHAT</div>
+
+            </div>
+        </div>
+        <hr>
+        <h3 id="projects">Back End Work</h3>
+        <div class="row mt-4">
+            <div class="col-md-3">
+                <img id="noteTaker" class="clickLinks" src="./assets/home_week11_noteTaker.png" alt="" width="200px"
+                    height="200px">
+                <div class="Text">Note Taker</div>
+            </div>
+            <div class="col-md-3">
+                <img id="" src="" class="clickLinks" alt="" width="200px" height="200px">
+                <!-- <div class="Text"></div> -->
+
             </div>
         </div>
     </div>
