fixed hrefs in html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="icon" href="./assets/about_me.png" type="image/gif" sizes="16x16">
+        <link rel="icon" href="about_me.png" type="image/gif" sizes="16x16">
     <title>About Me</title>
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://kit.fontawesome.com/d362bae7c2.js" crossorigin="anonymous"></script>
         <!-- <link rel="stylesheet" href="../public/css/tailwind.min.css"> -->
-        <link rel="stylesheet" href="css/style.css">    
+        <link rel="stylesheet" href="style.css">    
 </head>
 <body>
     <header>
@@ -20,13 +20,13 @@
                     <ul class="nav float-right mynav">
                         <!-- <i id="toggle" class="fas fa-toggle-on"></i>   -->
                     <li class="nav-item">
-                        <a class="nav-link active" href="./index.html">About Me |</a>
+                        <a class="nav-link active" href="index.html">About Me |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./portfolio.html">Portfolio |</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contact Me</a>
+                        <a class="nav-link" href="contact.html">Contact Me</a>
                     </li>   
                  </ul>
             </div>        
@@ -39,7 +39,7 @@
                 <h2 class="about-me">About me</h2>
             </div>
             <div class="col-sm-3">
-                <img class="me" class="img-thumbnail" class="img-responsive" src="./assets/Me (1).jpg" width="250px" height="350px" alt="img of me">
+                <img class="me" class="img-thumbnail" class="img-responsive" src="Me (1).jpg" width="250px" height="350px" alt="img of me">
             </div>
             <div class="col-sm-6">
                 <p class="info">My name is Anthony Guerrero, I was born in <strong>Queens, NY</strong> and when I was 12 years old I moved to
@@ -68,6 +68,6 @@
     <footer>copyright ©</footer>
     <script src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
