--- a/portfolio.html
+++ b/portfolio.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="./assets/portfolio-image-1.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="portfolio-image-1.png" type="image/gif" sizes="16x16">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,13 +19,13 @@
                 <h1 id="myname" class="float-left">Anthony Guerrero</h1>
                 <ul class="nav float-right mynav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="./index.html">About Me |</a>
+                        <a class="nav-link active" href="index.html">About Me |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./portfolio.html">Portfolio |</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio |</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contact Me</a>
+                        <a class="nav-link" href="contact.html">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -39,30 +39,30 @@
         <hr>
         <div class="clearFix row">
             <div class="col-md-3">
-                <img id="weatherDashboard" class="clickLinks" src="./assets/HomePage.png" alt="" width="200px"
+                <img id="weatherDashboard" class="clickLinks" src="HomePage.png" alt="" width="200px"
                     height="200px">
                 <div class="Text">Weather Dashboard</div>
             </div>
             <div class="col-md-3 codeQ">
-                <img id="codeQuiz" class="clickLinks" src="./assets/Code Quiz.png" alt="" width="200px" height="200px">
+                <img id="codeQuiz" class="clickLinks" src="Code Quiz.png" alt="" width="200px" height="200px">
                 <div class="Text">Code Quiz</div>
             </div>
             <div class="col-md-3 ">
-                <img id="passwordGenerator" class="clickLinks" src="./assets/password_generator.png" alt=""
+                <img id="passwordGenerator" class="clickLinks" src="password_generator.png" alt=""
                     width="200px" height="200px">
                 <div class="Text">Password Genertor</div>
 
             </div>
             <div class="col-md-3">
-                <img id="readMe" class="clickLinks" src="./assets/good_readme.png" alt="" width="200px" height="200px">
+                <img id="readMe" class="clickLinks" src="good_readme.png" alt="" width="200px" height="200px">
                 <div class="Text">README.md</div>
             </div>
             <div class="col-md-3">
-                <img id="workDay" class="clickLinks" src="./assets/work_day-Scheduler.png" alt="" width="200px" height="200px">
+                <img id="workDay" class="clickLinks" src="work_day-Scheduler.png" alt="" width="200px" height="200px">
                 <div class="Text">Work Day Scheduler</div>
             </div>
             <div class="col-md-3">
-                <img id="teamTemplate" class="clickLinks" src="./assets/team_template_final.png" alt="" width="200px" height="200px">
+                <img id="teamTemplate" class="clickLinks" src="team_template_final.png" alt="" width="200px" height="200px">
                 <div class="Text">Team Template</div>
             </div>
 
@@ -71,12 +71,12 @@
         <h3 id="projects">Projects</h3>
         <div class="row mt-4">
             <div class="col-md-3">
-                <img id="LocalWire" class="clickLinks" src="./assets/Local Wire.png" alt="" width="200px"
+                <img id="LocalWire" class="clickLinks" src="Local Wire.png" alt="" width="200px"
                     height="200px">
                 <div class="Text">Local Wire</div>
             </div>
             <div class="col-md-3">
-                <img id="stackChat" src="./assets/STACK_CHAT.png" class="clickLinks" alt="img of homepage of stack chat" width="200px" height="200px">
+                <img id="stackChat" src="STACK_CHAT.png" class="clickLinks" alt="img of homepage of stack chat" width="200px" height="200px">
                 <div class="Text">STACK CHAT</div>
 
             </div>
@@ -85,7 +85,7 @@
         <h3 id="projects">Back End Work</h3>
         <div class="row mt-4">
             <div class="col-md-3">
-                <img id="noteTaker" class="clickLinks" src="./assets/home_week11_noteTaker.png" alt="" width="200px"
+                <img id="noteTaker" class="clickLinks" src="home_week11_noteTaker.png" alt="" width="200px"
                     height="200px">
                 <div class="Text">Note Taker</div>
             </div>
@@ -104,7 +104,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
